# turing-machine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gtest/: CMakeLists.txt  mainTest.cpp  turingmachineTest.cpp  turingprogramTest.cpp
src/: errors.h  turingmachine.cpp  turingmachine.h  turingprogram.cpp  turingprogram.h
tests/: 1-output.txt  error-MT.txt
